--- a/index.html
+++ b/index.html
@@ -558,6 +558,7 @@
             const routes = {
                  1: 'Best_Discounts.html',
                  2: 'Discount_Conversion.html',
+                 3: 'Payment_Calculation_System.html',
                  // ... 其他路由
                  };
             if (routes[moduleId]) {
