--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
 
             <div class="grid-item" onclick="navigateTo(3)">
                 <div class="icon">🎯</div>
-                <h3>满减活动</h3>
-                <p>满额优惠</p>
+                <h3>付款计算</h3>
+                <p>根据填入的信息自动计算每人付款金额</p>
             </div>
 
             <div class="grid-item" onclick="navigateTo(4)">
