--- a/index.html
+++ b/index.html
@@ -540,8 +540,8 @@
 
             <div class="grid-item" onclick="navigateTo(16)">
                 <div class="icon">💬</div>
-                <h3>帮助中心</h3>
-                <p>使用指南</p>
+                <h3>KKKOF专用</h3>
+                <p>报价系统</p>
             </div>
         </div>
     </div>
@@ -559,6 +559,7 @@
                  1: 'Best_Discounts.html',
                  2: 'Discount_Conversion.html',
                  3: 'Payment_Calculation_System.html',
+                 16: 'Encrypted_Quotation_System.html',
                  // ... 其他路由
                  };
             if (routes[moduleId]) {
