--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>优惠系统 - 主入口</title>
+    <title>小工具集合系统 - 主入口</title>
     <style>
         * {
             margin: 0;
@@ -418,7 +418,7 @@
     <div class="loader">
         <div class="loader-content">
             <div class="spinner"></div>
-            <h2>优惠系统加载中...</h2>
+            <h2>工具加载中...</h2>
         </div>
     </div>
 
@@ -468,8 +468,8 @@
 
             <div class="grid-item" onclick="navigateTo(4)">
                 <div class="icon">🎁</div>
-                <h3>赠品管理</h3>
-                <p>礼品配置</p>
+                <h3>抽奖系统</h3>
+                <p>可自定义添加礼物与抽奖人员进行抽奖</p>
             </div>
 
             <div class="grid-item" onclick="navigateTo(5)">
@@ -559,6 +559,7 @@
                  1: 'Best_Discounts.html',
                  2: 'Discount_Conversion.html',
                  3: 'Payment_Calculation_System.html',
+                 4: 'Lottery_System.html',
                  16: 'Encrypted_Quotation_System.html',
                  // ... 其他路由
                  };
