--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
 
             <div class="grid-item" onclick="navigateTo(5)">
                 <div class="icon">⭐</div>
-                <h3>会员特权</h3>
-                <p>专属优惠</p>
+                <h3>贷款管理系统</h3>
+                <p>根据填入的贷款信息生成还款日历</p>
             </div>
 
             <div class="grid-item" onclick="navigateTo(6)">
@@ -560,6 +560,7 @@
                  2: 'Discount_Conversion.html',
                  3: 'Payment_Calculation_System.html',
                  4: 'Lottery_System.html',
+                 5: 'Loan_Management_System.html',
                  16: 'Encrypted_Quotation_System.html',
                  // ... 其他路由
                  };
